<resources>
    <string name="app_name">水果商城</string>
    <string name="action_settings">人已购买</string>
    <string name="hello_world">Hello world!</string>
    <string name="mainpage">首页</string>
    <string name="recommend">推荐</string>
    <string name="classification">分类</string>
    <string name="personalcenter">个人中心</string>
    <string name="sellfruit">卖水果</string>
    <string name="popularity">人气</string>
    <string name="salesvolume">销量</string>
    <string name="newest">最新</string>
    <string name="price">价格</string>
    <string name="berry">浆果类</string>
    <string name="citrus">柑橘类</string>
    <string name="drupe">核果</string>
    <string name="tryma">仁果</string>
    <string name="melon">瓜类</string>
    <string name="class1">草莓，桑葚，蔓越莓，蓝莓，黑莓等</string>
    <string name="class2">橘子，柳丁，金桔，柠檬，葡萄柚等</string>
    <string name="class3">樱桃，桃，李，梅，枣，橄榄，龙眼等</string>
    <string name="class4">苹果，梨，柿子，枇杷等</string>
    <string name="class5">西瓜，甜瓜，香瓜，哈密瓜等</string>
    <string name="logon">登录</string>
    <string name="orderconfirm">订单确认</string>
    <string name="register">注册</string>
    <string name="shoppingcart">购物车</string>
    <string name="collection">宝贝收藏</string>
    <string name="allorder">全部订单</string>
    <string name="setting">设置</string>
    <string name="helpandfeedback">帮助与反馈</string>
    <string name="accountnumber">账号</string>
    <string name="nocommodity">购物车没有任何商品</string>
    <string name="password">密码</string>
    <string name="cellnum">手机号</string>
    <string name="exitsign">退出登录</string>
    <string name="verificationcode">验证码</string>
    <string name="confirmpassword">确认密码</string>
    <string name="forgetpassword">忘记密码</string>
    <string name="modifypassword">修改密码</string>
    <string name="modifyaccount">修改昵称</string>
    <string name="confirm">确认</string>
    <string name="sendnum">发送验证码</string>
    <string name="receivingaddress">收货地址</string>
    <string name="userservice">用户注册服务协议</string>
    <string name="defaults">默认</string>
    <string name="sellnum">销量</string>
    <string name="tt">合计:</string>
    <string name="num">¥0.0</string>
    <string name="gopay">去支付</string>
    <string name="allpay">批量付款</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="st1">消息提醒</string>
    <string name="paymode">支付方式</string>
    <string name="st2">铃音</string>
    <string name="st3">震动</string>
    <string name="st4">帮助中心</string>
    <string name="st5">检查更新</string>
    <string name="st6">清除缓存</string>
    <string name="st7">关于我们</string>
    <string name="myorder">我的订单</string>
    <string name="myorder1">待付款</string>
    <string name="myorder2">待收货</string>
    <string name="myorder3">待发货</string>
    <string name="myorder4">待评价</string>
    <string name="checkorder">查看订单详情</string>
    <string name="freight">运费:</string>
    <string name="zero">¥0</string>
    <string name="Paid">实付:</string>
    <string name="onlyone">共一件</string>
    <string name="cancelorder">取消订单</string>
    <string name="Payment">付款</string>
    <string name="search">搜索</string>
    <string name="searchhint">请输入商品关键字</string>
    <string name="cleanhis">清除历史搜索记录</string>
    <string name="hotsearch">热门搜索:</string>
    <string name="hissearch">历史搜索:</string>
    <string name="apple">苹果</string>
    <string name="pear">香梨</string>
    <string name="grape">葡萄</string>
    <string name="kiwi">猕猴桃</string>
    <string name="watermelon">西瓜</string>
    <string name="haf1">注册登录</string>
    <string name="haf111">本水果APP 为一个销售水果的平台, 凡是你在使用上遇到任何问题,需要客服人员解答的,请拨打400-500-263电话, 将会有专人与你联系。</string>
    <string name="haf11">如何注册卖水果？</string>
    <string name="haf12">忘记登录密码怎么办？</string>
    <string name="haf13">什么事手机号绑定？</string>
    <string name="haf2">订单支付</string>
    <string name="haf21">卖水果有哪些支付方式？</string>
    <string name="haf22">如何查找订单？</string>
    <string name="haf23">不小心删除订单怎么找回？</string>
    <string name="haf3">物流查询</string>
    <string name="haf31">如何查看物流信息？</string>
    <string name="haf32">物流跟踪不显示或者异常怎么办？</string>
    <string name="haf33">商家长时间不发货怎么办？</string>
    <string name="pay1">支付宝支付</string>
    <string name="pay2">微信支付</string>
    <string name="pay3">银联支付</string>
    <string name="changed">已选择:</string>
    <string name="Alipay">支付宝钱包支付</string>
    <string name="sure">确定</string>
    <string name="personalmsg">个人信息</string>
    <string name="comdetail">商品详情</string>
    <string name="Specifications">规格</string>
    <string name="msg">信息</string>
    <string name="evaluation">评价</string>
    <string name="evaluationorder">评价订单</string>
    <string name="demonumber">36</string>
    <string name="numberone">0</string>
    <string name="sptwxq">商品图文详情</string>
    <string name="username">用户名称</string>
    <string name="clickcheck">点击查看个人中心</string>
    <string name="nickname">昵称</string>
    <string name="headportrait">头像</string>
    <string name="addra">添加收货地址</string>
    <string name="modifyra">修改收货地址</string>
    <string name="addadress">添加地址</string>
    <string name="editadress">编辑地址</string>
    <string name="setasdefaul">设为默认地址</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="cancel">取消</string>
    <string name="takepic">拍照</string>
    <string name="fromphotoalbum">相册</string>
    <string name="addadress1">收货人:</string>
    <string name="addadress2">手机号:</string>
    <string name="addadress3">详细地址:</string>
    <string name="addadress4">点此选择省市区</string>
    <string name="preservation">保存</string>
    <string name="total">合计:</string>
    <string name="otherpm">其他支付方式</string>
    <string name="addshoppingcart">加入购物车</string>
    <string name="demodate">2015-07-09</string>
    <string name="orderdetail">订单详情</string>
    <string name="waitpay">等待买家付款</string>
    <string name="waitshipped">等待卖家发货</string>
    <string name="delivered">卖家已发货</string>
    <string name="ordermoney">订单金额(含运费):</string>
    <string name="logisticsinformation">物流信息</string>
    <string name="checklogistics">查看物流</string>
    <string name="confirmreceive">确认收货</string>
    <string name="deleteorder">删除订单</string>
    <string name="hasreceived">买家已收货</string>
    <string name="expressname">快递名称</string>
    <string name="expressnamenum">物流单号:</string>
    <string name="commsg">物品信息</string>
    <string name="expressflow">物流跟踪</string>
    <string name="newaccount">请输入新昵称</string>
    <string name="usermanual">用户手册</string>
    <string name="aboutmyself">关于我们</string>
    <string name="about1">* 公司简介</string>
    <string name="about2">* 公司职工</string>
    <string name="about3">* 产品种类</string>
    <string name="commoditevaluation">商品评价:</string>
    <string name="good">好评</string>
    <string name="normal">中评</string>
    <string name="bad">差评</string>
    <string name="beg">求好评</string>
    <string name="score">给商品评分:</string>
    <string name="originalpassword">原密码</string>
    <string name="newpassword">新密码</string>
    <string name="nosearch">没有相关搜索商品</string>
    <string name="imgtextdetail">商品图文详情</string>
    <string name="about">*****************</string>
    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">  检测到新版本，立即更新吗?  </string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
    <string name="load_full">已加载全部</string>
    <string name="no_data">暂无数据</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">刷新\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>
</resources>