<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/redstandard"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/logonback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dip"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:layout_marginTop="8dip"
                android:background="@drawable/arrowleftwhite"
                android:contentDescription="@color/transparent"
                android:scaleX="0.8" 
                android:scaleY="0.9" />
        </LinearLayout>

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="40dip"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/phonenumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/editgreystroke"
        android:hint="@string/cellnum"
        android:inputType="phone"
        android:paddingLeft="10dp"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dip"
        android:layout_marginRight="30dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/verificationcode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="3"
            android:background="@drawable/editgreystroke"
            android:hint="@string/verificationcode"
            android:paddingLeft="10dp"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" />

        <Button
            android:id="@+id/getcode"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_weight="2.5"
            android:background="@drawable/layout_selectorred"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/sendnum"
            android:textColor="@color/common_white"
            android:textSize="16sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dip"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/editgreystroke"
        android:hint="@string/password"
        android:paddingLeft="10dp"
        android:inputType="textPassword"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/confirmpsd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dip"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:background="@drawable/editgreystroke"
        android:hint="@string/confirmpassword"
        android:paddingLeft="10dp"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:id="@+id/xieyi"
        android:layout_marginTop="10dp"
        android:text="@string/userservice"
        android:textColor="@color/common_grey_word" />

    <TextView
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/layout_selectorred"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/confirm"
        android:textColor="@color/common_white" />

</LinearLayout>