<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/load_full"
            android:textColor="@color/common_grey_word" />

        <TextView
            android:id="@+id/date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/demodate"
            android:textColor="@color/common_grey_word" />
    </LinearLayout>

    <RatingBar
        android:id="@+id/ratingbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        style="@style/customratingbar"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="3dp"
        android:rating="2.5"
        android:isIndicator="true"
        android:stepSize="0.5" />

    <TextView 
        android:id="@+id/evaluation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/haf32"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:paddingBottom="10dp"/>
</LinearLayout>