<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/redstandard"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@color/transparent"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:scaleX="0.8"
            android:scaleY="0.9"
            android:src="@drawable/arrowleftwhite" />

        <RelativeLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:layout_weight="5"
            android:background="@drawable/searchcommodity_bg"
            android:focusable="true"
            android:focusableInTouchMode="true" >

            <ImageView
                android:id="@+id/mang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_marginBottom="10dip"
                android:layout_marginTop="10dip"
                android:contentDescription="@color/transparent"
                android:src="@drawable/manger" />

            <EditText
                android:id="@+id/auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginBottom="10dip"
                android:layout_marginTop="10dip"
                android:layout_toRightOf="@id/mang"
                android:background="@drawable/searchcommodity_bg"
                android:hint="@string/searchhint"
                android:imeOptions="actionSearch"
                android:singleLine="true"
                android:textColor="@color/common_grey_word"
                android:textColorHint="@color/common_grey_word"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="16sp" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/search"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/searchproduct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="8dip"
                android:layout_marginRight="5dp"
                android:text="@string/search"
                android:textColor="@color/common_white"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/beforesearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:padding="10dp"
            android:text="@string/hotsearch"
            android:textColor="@color/common_grey_word" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/apple"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/textstrokegrey"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/apple"
                android:textColor="@color/cleanrecord_selector" />

            <TextView
                android:id="@+id/pear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/textstrokegrey"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/pear"
                android:textColor="@color/cleanrecord_selector" />

            <TextView
                android:id="@+id/grape"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/textstrokegrey"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/grape"
                android:textColor="@color/cleanrecord_selector" />

            <TextView
                android:id="@+id/kiwi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/textstrokegrey"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/kiwi"
                android:textColor="@color/cleanrecord_selector" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/watermelon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/textstrokegrey"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/watermelon"
                android:textColor="@color/cleanrecord_selector" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/hissearch"
            android:textColor="@color/common_grey_word" />

        <ListView
            android:id="@+id/searchlv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:listSelector="@color/transparent"
            android:divider="@color/transparent" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/common_white" >

            <TextView
                android:id="@+id/cleanhistory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/textstrokegrey"
                android:paddingBottom="3dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="3dp"
                android:text="@string/cleanhis"
                android:textColor="@color/cleanrecord_selector" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:text="@string/action_settings"
                android:visibility="invisible" />
        </RelativeLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/searchdetail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:listSelector="@color/transparent"
        android:visibility="gone" />

    <TextView 
        android:id="@+id/nosearch"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/nosearch"
        android:visibility="gone"
        android:layout_gravity="center"
        android:gravity="center"/>
</LinearLayout>