<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:background="@drawable/popupshape" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/popupshape"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/takepic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dip"
            android:background="@drawable/layout_selector"
            android:text="@string/takepic"
            android:textColor="@color/redstandard" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.1dip"
            android:background="@color/divider_color" />

        <TextView
            android:id="@+id/fromphotoalbum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_selector"
            android:gravity="center"
            android:padding="10dip"
            android:text="@string/fromphotoalbum" />
    </LinearLayout>

    <View 
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#3f636563"/>
    
    <TextView
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_selector"
        android:gravity="center"
        android:padding="10dip"
        android:text="@string/cancel" />

</LinearLayout>